--- a/filebrowser/templates/filebrowser/admin/django/createdir.html
+++ b/filebrowser/templates/filebrowser/admin/django/createdir.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 
 <!-- LOADING -->
-{% load i18n adminmedia fb_tags fb_csrf admin_static %}
+{% load i18n fb_tags fb_csrf admin_static %}
 
 <!-- STYLESHEETS -->
 {% block extrastyle %}
@@ -15,7 +15,12 @@
 {% block coltype %}flex{% endblock %}
 
 <!-- BREADCRUMBS -->
-{% block breadcrumbs %}{% include "filebrowser/include/breadcrumbs.html" %}{% endblock %}
+<!-- BREADCRUMBS -->
+{% block breadcrumbs %}
+    {% with "filebrowser/admin/"|add:settings_var.THEME|add:"/include/breadcrumbs.html" as breadcrumbs_template %}
+    {% include breadcrumbs_template %}
+    {% endwith %}
+{% endblock %}
 
 <!-- CONTENT -->
 {% block content %}
