Django theme fixes

--- a/filebrowser/templates/filebrowser/admin/django/index.html
+++ b/filebrowser/templates/filebrowser/admin/django/index.html
@@ -112,7 +112,7 @@
                 <!-- FILTERS -->
                 {% with "filebrowser/admin/"|add:settings_var.THEME|add:"/include/filter.html" as filter_template %}
                 {% include filter_template %}
-
+                {% endwith %}
             {% endblock %}
 
             <form id="changelist-form" action="" method="post">{% csrf_token %}
@@ -123,10 +123,12 @@
                         {% include "filebrowser/include/tableheader.html" %}
                         {% with "filebrowser/admin/"|add:settings_var.THEME|add:"/include/tableheader.html" as tableheader_template %}
                         {% include tableheader_template %}
+                        {% endwith %}
 
                         <tbody>
                             {% with "filebrowser/admin/"|add:settings_var.THEME|add:"/include/filelisting.html" as filelisting_template %}
                             {% include filelisting_template %}
+                            {% endwith %}
                         </tbody>
                     </table>
                 </div>
