Added TinyMCEv4 support. Thanks to alan-hicks/django-filebrowser.

--- a/filebrowser/templates/filebrowser/admin/django/include/tableheader.html
+++ b/filebrowser/templates/filebrowser/admin/django/include/tableheader.html
@@ -7,6 +7,7 @@
         {% if query.pop == "1" %}<th></th>{% endif %}
         {% if query.pop == "2" %}<th></th>{% endif %}
         {% if query.pop == "3" %}<th></th>{% endif %}
+        {% if query.pop == "4" %}<th></th>{% endif %}
         <!-- FILETYPE -->
         {% if query.o == "filetype" %}
         <th scope="col" class="sortable sorted {{ query.ot }}ending">
