--- a/filebrowser/templates/filebrowser/admin/django/index.html
+++ b/filebrowser/templates/filebrowser/admin/django/index.html
@@ -66,7 +66,7 @@
 {% endblock %}
 
 <!-- COLTYPE/BODYCLASS -->
-{% block bodyclass %}change-list filebrowser {% if query.pop %} popup{% endif %}{% endblock %}
+{% block bodyclass %}change-list filebrowser{% endblock %}
 {% block coltype %}flex{% endblock %}
 
 <!-- BREADCRUMBS -->
