Cleaned up the popup class that was duplicated in the templates, added a RETURN_ON_UPLOAD setting to filebrowser which returns to the file listing after a successful upload

--- a/filebrowser/templates/filebrowser/admin/django/upload.html
+++ b/filebrowser/templates/filebrowser/admin/django/upload.html
@@ -75,9 +75,12 @@
                     bar.css('width', new_width);
                 },
                 onComplete: function(id, fileName, resp){
-                    // if (resp.success) {
-                    //     this.getItem(id).fadeOut('slow');
-                    // }
+                    {% if settings_var.RETURN_ON_UPLOAD %}
+                    if (resp.success) {
+                        var newpath='../browse/{% query_string %}';
+                        window.location=newpath;                    
+                    }
+                    {% endif %}
                 },
                 showMessage: function(message){ alert(message); }
             });
@@ -87,7 +90,7 @@
 {% endblock %}
 
 <!-- COLTYPE/BODYCLASS -->
-{% block bodyclass %}change-form filebrowser{% if query.pop %} popup{% endif %}{% endblock %}
+{% block bodyclass %}change-form filebrowser{% endblock %}
 {% block coltype %}colM{% endblock %}
 
 <!-- BREADCRUMBS -->
