--- a/filebrowser/templates/filebrowser/admin/django/rename.html
+++ b/filebrowser/templates/filebrowser/admin/django/rename.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 <!-- COLTYPE/BODYCLASS -->
-{% block bodyclass %}change-form filebrowser{% if query.pop %} popup{% endif %}{% endblock %}
+{% block bodyclass %}change-form filebrowser{% endblock %}
 {% block content-class %}content-flexible{% endblock %}
 
 <!-- BREADCRUMBS -->
