--- a/filebrowser/templates/filebrowser/admin/grappelli/upload.html
+++ b/filebrowser/templates/filebrowser/admin/grappelli/upload.html
@@ -88,9 +88,12 @@
                     bar.css('width', new_width);
                 },
                 onComplete: function(id, fileName, resp){
-                    // if (resp.success) {
-                    //     this.getItem(id).fadeOut('slow');
-                    // }
+                    {% if settings_var.RETURN_ON_UPLOAD %}
+                    if (resp.success) {
+                        var newpath='../browse/{% query_string %}';
+                        window.location=newpath;                    
+                    }
+                    {% endif %}
                 },
                 showMessage: function(message){ alert(message); }
             });
